# gremlin_example

./: .gitignore  CLAUDE.md  INSTALLATION.md  README.md  SETUP_GUIDE.md  SETUP_SUMMARY.md  SETUP_SUMMARY.txt  WINDOWS_SETUP.txt  __init__.py  containers.txt  demo_output.txt  docker-compose.yml  null  packages.txt  pyproject.toml  requirements.txt  standalone_networkx_demo.py  standalone_networkx_demo_debug.py  standalone_networkx_demo_final.py  start_database.ps1  stop_database.ps1
.claude/: settings.local.json
conf/: gremlin-server.yaml  janusgraph-cassandra-es.properties  janusgraph-cassandra.properties
scripts/: load_sample_data.py  query_experts.py  query_experts_v2.py  start_database.sh  start_database_console.sh  stop_database.sh
src/examples/: load_sample_data.py  query_experts.py  query_experts_v2.py
src/gremlin/: __init__.py  data_loader.py  expert_finder.py  graph_db.py
tests/: test_graph_db.py
tests/gremlin/: test_graph_db.py  test_integration.py
