[tool.poetry]
name = "gremlin_example"
version = "0.1.0"
description = "Gremlin graph database operations package"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gremlin-python = ">=3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]

[tool.poetry.extras]
dev = ["pytest", "black"]
